# claw-code-rust

./: Cargo.toml  README.md
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: model.rs  query.rs  session.rs
crates/core/tests/: L1_basic_loop.rs  L3_budget_context.rs  L4_lifecycle.rs  e2e_ollama.rs
crates/core/tests/harness/: builders.rs
crates/safety/: Cargo.toml
crates/safety/src/: legacy_permissions.rs  lib.rs
crates/server/src/: approval.rs  bootstrap.rs  client.rs  connection.rs  event.rs  execution.rs  lib.rs  persistence.rs  projection.rs  protocol.rs  runtime.rs  session.rs  titles.rs  turn.rs
crates/server/tests/: persistence_resume.rs  protocol_contract.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  context.rs  file_edit.rs  file_read.rs  file_write.rs  orchestrator.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  input.rs  lib.rs  onboarding_config.rs  paste_burst.rs  render.rs  slash.rs  terminal.rs  tests.rs  worker.rs
crates/tui/src/render/: mod.rs
docs/: design-overview.md  spec-app-config.md  spec-context-management.md  spec-conversation.md  spec-detail-index.md  spec-language-model.md  spec-overview-architecture.md  spec-safety-execution-flow.md  spec-safety.md  spec-server-api.md  spec-tools.md
