[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tools",
    "crates/provider",
    "crates/safety",
    "crates/tasks",
    "crates/mcp",
    "crates/server",
    "crates/tui",
    "crates/utils",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
clawcr-core = { path = "crates/core" }
clawcr-tools = { path = "crates/tools" }
clawcr-provider = { path = "crates/provider" }
clawcr-safety = { path = "crates/safety" }
clawcr-tasks = { path = "crates/tasks" }
clawcr-mcp = { path = "crates/mcp" }
clawcr-utils = { path = "crates/utils" }
clawcr-server = { path = "crates/server" }
clawcr-tui = { path = "crates/tui" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# AI provider SDKs
async-anthropic = "0.6"
async-openai = { version = "0.34", features = ["chat-completion", "rustls"] }

# CLI
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
unicode-width = "0.2"
textwrap = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
glob = "0.3"
regex = "1"
smol_str = { version = "0.3", features = ["serde"] }
