[package]
name = "clawcr-safety"
description = "Secret redaction, approval policy, and sandbox policy contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
