[package]
name = "clawcr-tools"
description = "Tool trait, registry, execution orchestration, and built-in tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clawcr-safety = { workspace = true }
clawcr-provider = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
smol_str = { workspace = true }
