[package]
name = "clawcr-tui"
description = "Interactive terminal UI for ClawCR"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "clawcr_tui"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clawcr-core = { workspace = true }
clawcr-server = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
textwrap = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
pretty_assertions = "1"
